Trim arrays to size after mutations for memory savings (#277)